--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,15 +1,32 @@
 <h1>All Candidates</h1>
 
-<div>
-  <% @candidates.each do |candidate| %>
-    <div>
-        <%= candidate.id %>
-        <%= candidate.first_name %>
-        <%= candidate.last_name %>
-        <%= candidate.email %>
-        <%= candidate.gender %>
-        <%= candidate.ip_address %>
-        <%= candidate.date_of_birth %>
-    </div>
-  <% end %>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>FIRST NAME</th>
+      <th>LAST NAME</th>
+      <th>EMAIL</th>
+      <th>GENDER</th>
+      <th>IP ADDRESS</th>
+      <th>DATE OF BIRTH</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @candidates.each do |candidate| %>
+      <tr>
+        <td><%= candidate.id %></td>
+        <td><%= candidate.first_name %></td>
+        <td><%= candidate.last_name %></td>
+        <td><%= candidate.email %></td>
+        <td><%= candidate.gender %></td>
+        <td><%= candidate.ip_address %></td>
+        <td><%= candidate.date_of_birth %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
