--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -1,15 +1,15 @@
 <div>
 <%= form_for @candidate do |f| %>
   <p>
-  <%= f.label :first_name %>
+  <%= f.label :first_name, 'FIRST NAME' %>
   <%= f.text_field :first_name %>
   </p>
   <p>
-  <%= f.label :last_name %>
+  <%= f.label :last_name, 'LAST NAME' %>
   <%= f.text_field :last_name %>
   </p>
   <p>
-  <%= f.label :email %>
+  <%= f.label :email, 'EMAIL' %>
   <%= f.text_field :email %>
   </p>
   <p>
@@ -18,7 +18,7 @@
     <%= f.radio_button :gender, 'FEMALE' %> FEMALE<br />
   </p>
   <p>
-  <%= f.label :ip_address %>
+  <%= f.label :ip_address, 'IP ADDRESS' %>
   <%= f.text_field :ip_address %>
   </p>
   <!-- <p>
