implemented full CRUD

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -24,5 +24,7 @@
       </tr>
   </tbody>
 </table>
+<%= link_to "Edit Candidate", edit_candidate_path(@candidate) %>
+<%= link_to "Delete Candidate", candidate_path(@candidate), method: :delete %>
 
 <br>
