--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -14,8 +14,8 @@
   </p>
   <p>
     <b>GENDER</b><br />
-    <%= f.radio_button :gender, 'MALE' %> MALE<br />
-    <%= f.radio_button :gender, 'FEMALE' %> FEMALE<br />
+    <%= f.radio_button :gender, 'Male' %> MALE<br />
+    <%= f.radio_button :gender, 'Female' %> FEMALE<br />
   </p>
   <p>
   <%= f.label :ip_address, 'IP ADDRESS' %>
