--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Candidates</h1>
-
+<%= link_to "Enter New Candidate", new_candidate_path %>
 <table>
   <thead>
     <tr>
@@ -18,8 +18,8 @@
     <% @candidates.each do |candidate| %>
       <tr>
         <td><%= candidate.id %></td>
-        <td><%= candidate.first_name %></td>
-        <td><%= candidate.last_name %></td>
+        <td><%= link_to candidate.first_name, candidate_path(candidate) %></td>
+        <td><%= link_to candidate.last_name, candidate_path(candidate) %></td>
         <td><%= candidate.email %></td>
         <td><%= candidate.gender %></td>
         <td><%= candidate.ip_address %></td>
