working on react

--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,4 +1,6 @@
-<h1>All Candidates</h1>
+<%= react_component 'Main' %>
+
+<!-- <h1>All Candidates</h1>
 <%= link_to "Enter New Candidate", new_candidate_path %>
 <table>
   <thead>
@@ -29,4 +31,4 @@
   </tbody>
 </table>
 
-<br>
+<br> -->
