working on react show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,12 @@
     <% if user_signed_in? %>
 
     <p>Hello, <%= current_user.name %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
+    <%= link_to "Enter New Candidate", new_candidate_path %>
 
     <br>
 
     <% end %>
-    
+
     <%= yield %>
   </body>
 </html>
