--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,4 +1,6 @@
-<%= link_to "&larr; Back".html_safe, candidates_path %>
+<%= react_component 'Candidate', {candidate: @candidate} %>
+
+<!-- <%= link_to "&larr; Back".html_safe, candidates_path %>
 <table>
   <thead>
     <tr>
@@ -28,4 +30,4 @@
 <%= link_to "Edit Candidate", edit_candidate_path(@candidate) %>
 <%= link_to "Delete Candidate", candidate_path(@candidate), method: :delete %>
 
-<br>
+<br> -->
