--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,4 +1,4 @@
-<%= react_component 'Main' %>
+<%= react_component 'Candidates', {candidates: @candidates} %>
 
 <!-- <h1>All Candidates</h1>
 <%= link_to "Enter New Candidate", new_candidate_path %>
