--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <% if user_signed_in? %>
 
     <p>Hello, <%= current_user.name %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
-    <%= link_to "Enter New Candidate", new_candidate_path %>
-    <%= link_to "All Candidates", candidates_path %>
+    <!-- <%= link_to "Enter New Candidate", new_candidate_path %> -->  
+    <%= link_to "View All Candidates", candidates_path %>
 
     <br>
 
