--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,15 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+th {
+  padding: 13px;
+}
+
+td {
+  padding-left: 13px;
+}
+
+p {
+  margin-left: 20px;
+}
